--- a/styles/scss/partials/_rehabilitering.scss
+++ b/styles/scss/partials/_rehabilitering.scss
@@ -59,8 +59,9 @@
 
     .kamerainspeksjon__new {
         position: absolute;
-        left: -20px;
-        top: -10px;
+        top: -15px;
+        font-size: 14px;
+        font-weight: 700;
     }
 }
 
