--- a/styles/scss/partials/_typography.scss
+++ b/styles/scss/partials/_typography.scss
@@ -76,3 +76,12 @@ a, .nav__link--extra-a, .dropdown__option--a,  button {
 .orange-text {
     color: $orange;
 }
+
+// INDEX
+.index__text--h3 {
+    color: $dark-blue;
+}
+
+.red-text {
+    color: $link;
+}
