--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -7,7 +7,6 @@
 @import './partials/index';
 @import './partials/btn';
 @import './partials/testimonials';
-@import './partials/login';
 @import './partials/considerRehab';
 @import './partials/useProfessionals';
 @import './partials/footer';
@@ -16,13 +15,12 @@
 @import './partials/whiteContainer';
 @import './partials/adminMessage';
 @import './partials/about';
-@import './partials/admin';
 @import './partials/service';
 @import './partials/search';
-@import './partials/globalsAdmin';
 @import './partials/404';
 @import './partials/ildstederOgOvn';
 @import './partials/ildsted';
 @import './partials/takPipe';
 @import './partials/rehabilitering';
 @import './partials/stalpipe';
+@import './partials/services';
