--- a/styles/scss/partials/_greyContainer.scss
+++ b/styles/scss/partials/_greyContainer.scss
@@ -40,6 +40,10 @@
     margin: 0 auto;
     // border: 1px solid red;
     padding-top: 20px;
+
+    @include respond-to('medium') {
+        width: 80%;
+    }
 }
 
 .container__padding {
