--- a/styles/scss/partials/_ildstederOgOvn.scss
+++ b/styles/scss/partials/_ildstederOgOvn.scss
@@ -81,6 +81,39 @@
             bottom: 0;
         }
     }
+
+    .ildsteder__recommend {
+        color: $orange;
+        position: absolute;
+        z-index: 5;
+        // bottom: 120px;
+        top: 0;
+        right: 0;
+        background-color: rgba(255, 255, 255, 0.6);
+        // padding: 5px 10px;
+        backdrop-filter: blur(5px);
+        width: 70px;
+        height: 27px;
+
+        @include respond-to('medium') {
+            height: 30px;
+            width: 80px;
+        }
+    }
+
+    .ildsteder__recommend--p {
+        font-size: 14px;
+        font-weight: 700;
+        position: absolute;
+        z-index: 5;
+        color: $orange;
+        top: 2px;
+        right: 5px;
+
+        @include respond-to('medium') {
+            font-size: 16px;
+        }
+    }
 }
 
 // Ovnsmontering
