--- a/styles/scss/partials/_variables.scss
+++ b/styles/scss/partials/_variables.scss
@@ -4,10 +4,11 @@ $darker-blue: #27353E;
 $white: #FFF;
 $darker-white: #f0f0f0;
 $light-grey: #F3F3F3;
-$link: #F74141;
 $grey: #E4E4E4;
 $dark-grey: #D2D2D2;
-$orange: #D45F1C;
+$link: #D45F1C;
+// Endret fra rød til oransge, derfor rød farge
+$orange: #F74141; 
 
 $light-blue: #9AC8E4;
 $beige: #BFAB93;
