--- a/styles/scss/partials/_variables.scss
+++ b/styles/scss/partials/_variables.scss
@@ -6,9 +6,8 @@ $darker-white: #f0f0f0;
 $light-grey: #F3F3F3;
 $grey: #E4E4E4;
 $dark-grey: #D2D2D2;
-$link: #D45F1C;
-// Endret fra rød til oransge, derfor rød farge
-$orange: #F74141; 
+$orange: #D45F1C; 
+$link: #F74141;
 
 $light-blue: #9AC8E4;
 $beige: #BFAB93;
