--- a/styles/scss/partials/_variables.scss
+++ b/styles/scss/partials/_variables.scss
@@ -7,7 +7,7 @@ $light-grey: #F3F3F3;
 $grey: #E4E4E4;
 $dark-grey: #D2D2D2;
 $orange: #D45F1C; 
-$link: #F74141;
+$link: #E34156;
 
 $light-blue: #9AC8E4;
 $beige: #BFAB93;
