--- a/styles/scss/partials/_considerRehab.scss
+++ b/styles/scss/partials/_considerRehab.scss
@@ -1,5 +1,11 @@
 .consider-rehab {
-    margin-top: 50px;
+    max-width: 95%;
+    margin: 50px auto 0 auto;
+
+    @include respond-to('medium') {
+        margin-top: 50px;
+        max-width: 100%;
+    }
 }
 
 .consider-rehab__text {
