--- a/styles/scss/partials/_global.scss
+++ b/styles/scss/partials/_global.scss
@@ -10,7 +10,7 @@ html {
     overflow-x: hidden;
 
     @include respond-to('medium') {
-        overflow-x: auto;
+        overflow-x: visible;
     }
 }
 
