--- a/styles/scss/style.css
+++ b/styles/scss/style.css
@@ -94,7 +94,7 @@ html {
   scroll-behavior: smooth;
   overflow-x: hidden;
 }
-@media (min-width: 992px) {
+@media (min-width: 767px) {
   html {
     overflow-x: visible;
   }
@@ -106,6 +106,11 @@ body {
   overflow-x: hidden;
   max-width: 100%;
   margin: 0 auto;
+}
+@media (min-width: 767px) {
+  body {
+    max-width: 90%;
+  }
 }
 @media (min-width: 992px) {
   body {
@@ -151,12 +156,12 @@ body h6 {
   }
 }
 body p, body input, body textarea, body .contact__dropdown {
-  font-size: 16px;
+  font-size: 18px;
+  line-height: 30px;
 }
 @media (min-width: 992px) {
   body p, body input, body textarea, body .contact__dropdown {
     font-size: 18px;
-    line-height: 30px;
   }
 }
 body a, body button {
@@ -299,6 +304,7 @@ body .some__img:hover, body .delete:hover {
   max-width: 100%;
   width: 150px;
   cursor: pointer;
+  left: 10px;
 }
 @media (min-width: 992px) {
   .logo {
