--- a/styles/scss/partials/_global.scss
+++ b/styles/scss/partials/_global.scss
@@ -137,6 +137,8 @@ body {
 
         .circle-info__h3 {
             color: #FFF !important;
+            font-size: 16px;
+            line-height: 25px;
         }
     }
 
