--- a/styles/scss/partials/_ildsted.scss
+++ b/styles/scss/partials/_ildsted.scss
@@ -197,14 +197,11 @@
     border: 1px solid green;
 
     margin: 0 auto;
-    max-width: 100%;
-}
+    max-width: 95%;
 
-.related-ild__products {
-    // margin: 0 auto;
-    // max-width: 40%;
-
-    // border: 1px solid red;
+    @include respond-to('medium') {
+        max-width: 100%;
+    }
 }
 
 .related-ild__products {
@@ -214,5 +211,19 @@
 }
 
 .related-ild__product-container {
-    margin: 30px;
+    margin: 0 30px 30px 0;
+    border: 1px solid red;
+    width: 200px;
+
+    // .secondary-btn {
+    //     margin-top: 10px;
+    //     display: flex;
+    //     align-content: flex-end;
+    // }
 }   
+
+.related__ild--btn {
+    margin-top: 10px;
+        display: flex;
+        align-content: flex-end;
+}
